--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,18 @@
-# Основные зависимости для асинхронности и HTTP
-aiohttp==3.9.3
-aiofiles==23.2.1
-asyncio==3.4.3
-
-# Telegram Bot (используется `telegram.ext`)
-python-telegram-bot==20.3  # Стабильная версия (не 21.x, так как там breaking changes)
-
-# Работа с данными
-pandas==2.1.4
-numpy==1.24.4
-
-# База данных
-sqlalchemy==2.0.23
-
-# Машинное обучение и предобработка
-scikit-learn==1.3.2
-lightgbm==4.1.0
-joblib==1.3.2
-
-# Криптобиржи (CCXT)
-ccxt==3.1.38  # async_support работает стабильно
-
-# Анализ настроений (VADER)
-vaderSentiment==3.4.1
-
-# Парсинг RSS (новостные фиды)
-feedparser==6.0.10
-
-# Визуализация (если используете графики)
-matplotlib==3.7.4
-
-# Работа с .env
-python-dotenv==1.0.0
-
-# Логирование и обработка асинхронности
-nest-asyncio==1.5.8
-
-# Дополнительные (если нужны)
-typing-extensions==4.8.0
-pydantic==2.5.3  # Если используется валидация данных
+﻿aiofiles==24.1.0
+aiogram==3.20.0.post0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+attrs==25.3.0
+certifi==2025.4.26
+frozenlist==1.6.0
+idna==3.10
+magic-filter==1.0.12
+multidict==6.4.3
+propcache==0.3.1
+pydantic==2.11.4
+pydantic_core==2.33.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+yarl==1.20.0
