--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,26 @@
+# Ядро
 python-telegram-bot==20.3
-aiohttp==3.9.3
+aiohttp==3.8.4
 python-dotenv==1.0.0
+
+# База данных
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.7
+
+# Данные
+pandas==1.5.3
+numpy==1.24.4
+joblib==1.2.0
+
+# ML/AI
+scikit-learn==1.2.2
+lightgbm==3.3.5
+vaderSentiment==3.4.1
+
+# Крипта
+ccxt==3.1.38
+
+# Дополнительно
+feedparser==6.0.10
+matplotlib==3.7.1
+nest-asyncio==1.5.8
